welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:3: error: value =+ is not a member of Int
    if (die1==6){return 1+die2} else { die1=+1}
                                           ^